# Objektorientierung

./: README.md  TODO.txt  app.py  main.py  pyproject.toml  requirements.txt  streamlit.py
source/: callbacks.py  config.py  ekgdata.py  leistungskurve.py  leistungstest_plot.py  logging_config.py  person.py  read_data_1.py  two_colums.py
